springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: springboot-container
          image: containerregisterypfe1.azurecr.io/springboot-app:v5
          ports:
            - containerPort: 8089
