springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  type: ClusterIP
  selector:
    app: springboot-app
  ports:
  - protocol: TCP
    port: 8089
    targetPort: 8089
