IngressSpring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: angular.local
      http:
        paths:
          # Les appels vers /api/... vont vers Spring Boot
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: springboot-service
                port:
                  number: 8089
